Changing the display format

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <script src="sketch.js"></script>
+    <script src="help.js"></script>
     <script src="genColor.js"></script>
     <script src="genFileInOut.js"></script>
     <script src="genAutomat.js"></script>
