Unnecessary parts deleted; configuration enabled

--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
   <body>
     <script src="sketch.js"></script>
     <script src="genHelp.js"></script>
-    <script src="genColor.js"></script>
-    <script src="genFileInOut.js"></script>
-    <script src="genAutomat.js"></script>
-    <script src="genDialog.js"></script>
+    <script src="genDiaMain.js"></script>
+    <script src="genDiaConf.js"></script>
     <script src="snails.js"></script>
   </body>
-</html>
+<!-- </html> -->
